--- a/estilos.css
+++ b/estilos.css
@@ -16,7 +16,7 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     float: center;
     color: #005883;
-    padding: 30px;
+    padding: 15px;
 }
 
 *{margin:0;padding:0;}  
@@ -63,4 +63,10 @@ h4{
     padding: 10px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: #005883;
+}
+body{
+    margin-left: 10px;
+  margin-right: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
