--- a/estilos.css
+++ b/estilos.css
@@ -58,6 +58,7 @@ p {
     padding: 10px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: #005883;
+    text-align: justify;
 }
 h4{
     padding: 10px;
