--- a/estilos.css
+++ b/estilos.css
@@ -71,3 +71,19 @@ body{
   margin-top: 10px;
   margin-bottom: 10px;
 }
+html {
+    min-height: 100%;
+    position: relative;
+  }
+  body {
+    margin: 0;
+    margin-bottom: 104px;
+  }
+  footer {
+      background-color:#f47920;
+    position: absolute;
+    bottom: 0;
+    width: 150%;
+    color: white;
+  
+  }
