--- a/estilos.css
+++ b/estilos.css
@@ -2,6 +2,7 @@
     text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color:  #F0B429;
+    margin-left: 10px;
 }
 
 .menu {
